# astro-mind

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  load_test.py  load_test_results.json  plot_load_test.py  pyproject.toml
backend/src/agent_eval/: baselines.py  batch_runner.py  error_analysis.py  harness.py  instrumentation.py  judges.py  metrics.py  pricing.py  report.py  report_eval_batches.py  repro_stats.py  run_ablation_eval.py  run_baseline_eval.py  run_cost_report.py  run_error_analysis.py  run_guard_eval.py  run_image_eval.py  run_notebook_eval.py  run_report_eval.py  run_reproducibility_eval.py  run_route_eval.py  run_search_eval.py  schema.py
backend/src/agent_eval/datasets/: guard_eval.json  image_eval.json  notebook_eval.json  report_eval.json  route_eval.json  search_eval.json
backend/src/agent_eval/results/: cost_estimate.md
backend/src/agents/: base.py  conversation.py  document_analyzer.py  galaxy_predictor.py  guard.py  image_agent.py  llm.py  notebook.py  orchestrator.py  report_agent.py  search.py  synth.py  synthetic_chunks.py  tools.py
backend/src/api/: app.py  auth.py
backend/src/auth/: accounts.py  security.py
backend/src/core/: config.py  metering.py  models.py
backend/src/ingestion/: chunker.py  fits_preview.py  parser.py  pipeline.py  web.py
backend/src/persistence/: embed.py  orm.py  rerank.py  store.py  vector.py
backend/src/persistence/migrations/: env.py
backend/src/persistence/migrations/versions/: 0001_initial.py  0002_documents_user_id.py  0003_conversations.py  0004_usage_plans.py  0005_sources.py  0006_reports.py  0009_newsletter.py  (+8 more)
backend/src/reports/: pdf.py
backend/src/sources/: apod.py  arxiv.py  health.py  nasa_images.py  websearch.py
backend/src/trends/: charts.py  exoplanets.py  googletrends.py  report.py
backend/tests/: conftest.py  test_api_admin.py  test_api_auth.py  test_api_conversations.py  test_api_converse.py  test_chunker.py  test_conversation.py  test_guard.py  test_image_agent.py  test_llm.py  test_metering.py  test_orchestrator.py  test_report_agent.py  test_search.py  test_search_agent.py  test_security.py  test_store.py  test_synth.py  test_trends.py
backend/tests/agent_eval/: test_baselines.py  test_batch_runner.py  test_error_analysis.py  test_guard_eval.py  test_harness.py  test_image_eval.py  test_instrumentation.py  test_judges.py  test_metrics.py  test_notebook_eval.py  test_pricing.py  test_report_eval.py  test_repro_stats.py  test_route_eval.py  test_search_eval.py
backend/tests/fixtures/: README.md  make_sample.py  make_sample_docx.py  make_sample_fits.py  sample.docx  sample.fits
(+100 files in other folders)
